fixed problem with IE not correctly (or accurately enoug?) using calc() which resulted in overflowing color element on 2nd row on some zoom levels (including default 100%)

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -21,7 +21,7 @@
 	box-sizing: border-box;
 	float: left;
 
-	width: calc(100% / 13);
+	width: 7.6923076923076923076923076923077%; /* calc(100% / 13); */
 	height: 50px;
 	top: 0;
 	position: relative;
